Fix scroll bar appearing on some pages causing layout shift

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,5 +1,6 @@
 body {
   overflow-x: hidden;
+  padding-left: calc(100vw - 100%); // From https://stackoverflow.com/a/30293718
 }
 
 .page-container {
